tests/spec/emit/snapshots/builtin_imaginary.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(c: complex128) -> float64 {
    imaginary(c)
  }
---
package main

func test(c complex128) float64 {
	return imag(c)
}
