tests/spec/emit/snapshots/builtin_max_three_floats.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> float64 {
    max(1.0, 2.0, 3.0)
  }
---
package main

func test() float64 {
	return max(1.0, 2.0, 3.0)
}
