tests/spec/emit/snapshots/builtin_min_explicit_type_arg_into_unknown.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Unknown {
    min<byte>(1, 2)
  }
---
package main

func test() any {
	return byte(min(1, 2))
}
