tests/spec/emit/snapshots/builtin_min_named_go_type.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  import "go:time"
  
  fn test(a: time.Duration, b: time.Duration) -> time.Duration {
    min(a, b)
  }
---
package main

import "time"

func test(a, b time.Duration) time.Duration {
	return time.Duration(min(a, b))
}
