tests/spec/emit/snapshots/builtin_min_strings.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> string {
    min("a", "b")
  }
---
package main

func test() string {
	return min("a", "b")
}
