tests/spec/emit/snapshots/builtin_min_two_ints.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> int {
    min(1, 2)
  }
---
package main

func test() int {
	return min(1, 2)
}
