tests/spec/emit/snapshots/builtin_min_types_a_character_literal_into_an_int_slot.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> int {
    let letter: int = min('a', 'b')
    letter
  }
---
package main

func test() int {
	var letter int = min('a', 'b')
	return letter
}
