tests/spec/emit/snapshots/builtin_min_types_a_literal_into_a_newtype.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  struct Ticket(int)
  struct Label(string)
  
  fn test() -> Ticket {
    let label: Label = max("a", "b")
    let _ = label
    min(1, 2)
  }
---
package main

type Ticket int

type Label string

func test() Ticket {
	var label Label = max("a", "b")
	_ = label
	return min(1, 2)
}
